$Id: History,v 1.14 2001-10-31 17:34:11 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm2 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
31-10-01 mma (testem2-V03-02-01)
- invert run/initialize and calor/update in all runXX.mac (and TestEm2.in)
     
25-10-01 mma (testem2-V03-02-00)
- mods in TestEm2.cc: the initialisation and vis initialisation are
  not done by default. --> inserted /run/initialize in all macros.
- To get visualisation: > /control/execute vis.mac
- 80 columns everywhere.    
	       
19-10-01  Steve O'Neale (examples-V03-02-00)
- Update reference output

27-03-01  mma (testem2-V03-00-05)
- set cppflag G4NOHIST = true in gnumakefile
     
08-03-01  Hisaya (testem2-V03-00-04)
- RunAction adapted for STL
	       
21-02-01  mma (testem2-V03-00-03)
- hbook histograms restored
	            
20-02-01  mma (testem2-V03-00-02)
- verbose stepping adapted for STL
- save rndm at begin of event     
	      
07-12-00  mma (testem2-V02-00-03 & testem-noHist)
- remove hbook histograms: GNUmakefile,runAction
				   
06-12-00  mma (testem2-V02-00-02 & testem-withHist)
- update of init.mac for new vis commands.
- G4UItcsh in the main()
	  				 
25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for min.delta energy cut and cut tabulation
- Update test outputs Lateral profile changes comparable with rms (10 per cent)