@@ -1,4 +1,4 @@
-$Id: History,v 1.14 2001-10-31 17:34:11 maire Exp $
+$Id: History,v 1.15 2001-11-28 18:57:23 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,12 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+28-11-01  mma (testem2-V03-02-02) 
+- EventAction: DrawTrack "none"
+- small change in vis.mac and DetectorConstruction.cc
+- suppression of the rndm commands, now managed by G4RunManager: 
+  --> RunAction, EventAction. suppression of RunActionMessenger
      
 31-10-01 mma (testem2-V03-02-01)
 - invert run/initialize and calor/update in all runXX.mac (and TestEm2.in)
